--- a/tests/android/app/build.gradle
+++ b/tests/android/app/build.gradle
@@ -25,7 +25,7 @@ android {
     }
 
     testBuildType System.getProperty('testBuildType', 'debug')
-    testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+    testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     missingDimensionStrategy "minReactNative", "minReactNative46"
     multiDexEnabled true
   }
@@ -149,8 +149,8 @@ dependencies {
   }
   androidTestImplementation(project(path: ":detox"))
   androidTestImplementation 'junit:junit:4.12'
-  androidTestImplementation 'com.android.support.test:runner:1.0.2'
-  androidTestImplementation 'com.android.support.test:rules:1.0.2'
+  androidTestImplementation 'androidx.test:runner:1.1.0'
+  androidTestImplementation 'androidx.test:rules:1.1.0'
 }
 
 // Run this once to be able to run the application with BUCK
